DBJR-1329: fix toggle buttons for collapsing in reaction timeline

--- a/assets/front/less/components/common/followup.less
+++ b/assets/front/less/components/common/followup.less
@@ -337,3 +337,7 @@
 .followup-timeline-box-collapsible.collapsed .followup-well-collapsible.well {
     max-height: 400px;
 }
+
+.followup-timeline-box-collapsible.collapsed .followup-reputation {
+    display: none;
+}
